// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications index test snapshots loading 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c11 svg {
  height: 24px;
  width: 24px;
}

.c11 svg path.path-fill,
.c11 svg line.path-fill,
.c11 svg polygon.path-fill,
.c11 svg rect.path-fill,
.c11 svg circle.path-fill,
.c11 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11 svg path.stroke-fill,
.c11 svg line.stroke-fill,
.c11 svg polygon.stroke-fill,
.c11 svg rect.stroke-fill,
.c11 svg circle.stroke-fill,
.c11 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c11.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c11.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11 .c6 {
  margin-left: 4px;
}

.c11 img {
  width: 24px;
}

.c17 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.c8 {
  max-width: 400px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 .MuiSwitch-thumb {
  color: #fff;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20id%3D%22Capa_29%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%20%7B%0A%20%20fill%3A%20%2300b3ec%3B%0A%7D%0A%0A.cls-2%20%7B%0A%20%20fill%3A%20none%3B%0A%20%20stroke%3A%20%2300b3ec%3B%0A%20%20stroke-linecap%3A%20round%3B%0A%20%20stroke-miterlimit%3A%2010%3B%0A%7D%0A%0A%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cpath%20class%3D%22cls-1%22%20d%3D%22m10%2C5.97c-1.06%2C0-2.08.42-2.83%2C1.17-.75.75-1.17%2C1.77-1.17%2C2.83s.42%2C2.08%2C1.17%2C2.83c.75.75%2C1.77%2C1.17%2C2.83%2C1.17s2.08-.42%2C2.83-1.17c.75-.75%2C1.17-1.77%2C1.17-2.83%2C0-2.21-1.79-4-4-4Z%22%3E%3C%2Fpath%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2210%22%20y1%3D%223.5%22%20x2%3D%2210%22%20y2%3D%224.5%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.41%22%20y1%3D%225.4%22%20x2%3D%226.11%22%20y2%3D%226.1%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%223.5%22%20y1%3D%229.99%22%20x2%3D%224.5%22%20y2%3D%229.99%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.4%22%20y1%3D%2214.58%22%20x2%3D%226.1%22%20y2%3D%2213.87%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%229.99%22%20y1%3D%2216.49%22%20x2%3D%229.99%22%20y2%3D%2215.49%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.58%22%20y1%3D%2214.59%22%20x2%3D%2213.87%22%20y2%3D%2213.88%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2216.49%22%20y1%3D%2210%22%20x2%3D%2215.49%22%20y2%3D%2210%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.59%22%20y1%3D%225.41%22%20x2%3D%2213.88%22%20y2%3D%226.11%22%3E%3C%2Fline%3E%3C%2Fsvg%3E%0A);
}

.c9 .MuiSwitch-track {
  background-color: #00b3ec;
}

.c10 {
  height: 40px;
  width: 40px;
}

.c10.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c10.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c12 {
  height: 100%;
  width: calc(100% - 48px);
  padding: 0 24px;
  max-height: calc(100vh - 60px);
  overflow-wrap: normal;
  overflow-x: scroll;
  margin: 0px auto;
}

.c2 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.c14 {
  background-color: #fff;
  border-radius: 10px;
  box-sizing: border-box;
  margin: 0 auto;
  min-height: 100%;
}

.c4 {
  height: 60px;
  min-width: 650px;
  z-index: 2;
  width: calc(100% - 64px);
  padding: 0 32px;
}

.c15 .MuiAlert-root {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          <div
            class="c5"
          >
            <span
              class="c6 c7 c8 ellipsis"
              color="neutral40"
              data-testid="text-Applications"
              title="Applications"
            >
              Applications
            </span>
          </div>
        </div>
        <div
          class=""
        >
          <span
            class="MuiSwitch-root c9 $7335ba1b890ac032$var$DarkModeSwitch"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiSwitch-switchBase MuiSwitch-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-10 MuiSwitch-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="MuiSwitch-thumb"
                />
              </span>
            </span>
            <span
              class="MuiSwitch-track"
            />
          </span>
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root c10"
            tabindex="0"
            title="Account settings"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="c5 c11"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                </svg>
              </div>
            </span>
          </button>
        </div>
      </div>
      <div
        class="c12"
      >
        <div
          class="c13 c14 c15"
        >
          <div
            class="c16 c17 "
          >
            <div
              class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
              role="progressbar"
              style="width: 40px; height: 40px;"
            >
              <svg
                class="MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applications index test snapshots success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c42 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c47 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c48 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 12px;
  font-weight: 600;
  text-transform: capitalize;
  font-style: normal;
  color: #737373;
}

.c11 svg {
  height: 24px;
  width: 24px;
}

.c11 svg path.path-fill,
.c11 svg line.path-fill,
.c11 svg polygon.path-fill,
.c11 svg rect.path-fill,
.c11 svg circle.path-fill,
.c11 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11 svg path.stroke-fill,
.c11 svg line.stroke-fill,
.c11 svg polygon.stroke-fill,
.c11 svg rect.stroke-fill,
.c11 svg circle.stroke-fill,
.c11 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c11.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c11.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11 .c6 {
  margin-left: 4px;
}

.c11 img {
  width: 24px;
}

.c21 svg {
  height: 16px;
  width: 16px;
}

.c21 svg path.path-fill,
.c21 svg line.path-fill,
.c21 svg polygon.path-fill,
.c21 svg rect.path-fill,
.c21 svg circle.path-fill,
.c21 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c21 svg path.stroke-fill,
.c21 svg line.stroke-fill,
.c21 svg polygon.stroke-fill,
.c21 svg rect.stroke-fill,
.c21 svg circle.stroke-fill,
.c21 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c21 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c21.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c21.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c21 .c6 {
  margin-left: 4px;
}

.c21 img {
  width: 16px;
}

.c35 svg {
  fill: #737373;
  height: 24px;
  width: 24px;
}

.c35 svg path.path-fill,
.c35 svg line.path-fill,
.c35 svg polygon.path-fill,
.c35 svg rect.path-fill,
.c35 svg circle.path-fill,
.c35 svg polyline.path-fill {
  fill: #737373 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c35 svg path.stroke-fill,
.c35 svg line.stroke-fill,
.c35 svg polygon.stroke-fill,
.c35 svg rect.stroke-fill,
.c35 svg circle.stroke-fill,
.c35 svg polyline.stroke-fill {
  stroke: #737373 !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c35 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c35.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c35.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c35 .c6 {
  margin-left: 4px;
  color: #737373;
}

.c35 img {
  width: 24px;
}

.c41 svg {
  fill: #d8d8d8;
  height: 16px;
  width: 16px;
}

.c41 svg path.path-fill,
.c41 svg line.path-fill,
.c41 svg polygon.path-fill,
.c41 svg rect.path-fill,
.c41 svg circle.path-fill,
.c41 svg polyline.path-fill {
  fill: #d8d8d8 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c41 svg path.stroke-fill,
.c41 svg line.stroke-fill,
.c41 svg polygon.stroke-fill,
.c41 svg rect.stroke-fill,
.c41 svg circle.stroke-fill,
.c41 svg polyline.stroke-fill {
  stroke: #d8d8d8 !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c41 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c41.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c41.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c41 .c6 {
  margin-left: 4px;
  color: #d8d8d8;
}

.c41 img {
  width: 16px;
}

.c31 {
  padding: 4px;
}

.c20.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c20.MuiButton-outlined {
  padding: 8px 12px;
}

.c20.MuiButton-outlinedPrimary {
  border-color: #d8d8d8;
}

.c28.MuiButton-root {
  border-radius: 50%;
  min-width: 38px;
  height: 38px;
  padding: 0;
}

.c28.MuiButton-text {
  padding: 0;
}

.c29.MuiButton-outlined {
  border-color: #d8d8d8;
  border-left: none;
  border-radius: 0 2px 2px 0;
}

.c29.MuiButton-outlined:hover,
.c29.MuiButton-outlined:disabled {
  border-left: none;
}

.c29.MuiButton-root {
  min-width: 0;
  height: 32px;
  padding: 8px 4px;
}

.c29.MuiButton-text {
  padding: 0;
}

.c27.MuiButton-outlined {
  margin-right: 0;
  border-radius: 2px 0 0 2px;
  border-right: none;
}

.c27.MuiButton-outlined:hover,
.c27.MuiButton-outlined:disabled {
  border-right: none;
}

.c30 {
  position: absolute;
  overflow: hidden;
  background: #fff;
  height: 0px;
  -webkit-transition-property: height;
  transition-property: height;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  z-index: 1;
}

.c43 {
  position: relative;
  height: 100%;
  width: 0px;
  left: 24px;
  -webkit-transition-property: width,left;
  transition-property: width,left;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c43.open {
  left: 0px;
  width: 350px;
}

.c44 {
  background: rbga(255,255,255,0.75);
  height: 100%;
  width: 100%;
  border-left: 2px solid #d8d8d8;
  padding: 24px;
  padding-left: 32px;
}

.c46 .MuiListItem-gutters {
  padding-left: 0px;
}

.c46 .MuiCheckbox-root {
  padding: 0px;
}

.c46 .MuiCheckbox-colorSecondary.Mui-checked {
  color: #00b3ec;
}

.c33 {
  height: 40px;
  padding: 4px 0px;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
}

.c33 .MuiChip-root {
  color: #1a1a1a;
  margin-right: 4px;
  background-color: #F6F7F9;
  -webkit-transition: none;
  transition: none;
}

.c36 {
  width: 0px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  margin-left: 4px;
}

.c36.expanded {
  width: 200px;
}

.c38.MuiButton-root {
  margin: 0;
  text-transform: none;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c38.MuiButton-text {
  min-width: 0px;
}

.c38.MuiButton-text .selected {
  color: #1a1a1a;
}

.c38.arrow {
  min-width: 0px;
}

.c39 td {
  text-align: center;
}

.c25 {
  max-width: 100%;
}

.c34 {
  position: relative;
  padding: 0 12px;
}

.c22 {
  width: 100%;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: hidden;
}

.c22 h2 {
  padding: 8px;
  font-size: 12px;
  font-weight: 600;
  color: #737373;
  margin: 0px;
  white-space: nowrap;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c22 .MuiTableRow-root {
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c22 .MuiTableRow-root:not(.MuiTableRow-head):hover {
  background: #f5f5f5;
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c22 table {
  margin-top: 12px;
}

.c22 th {
  padding: 0;
  background: #F6F7F9;
}

.c22 th .MuiCheckbox-root {
  padding: 4px 9px;
}

.c22 th:first-child {
  border-top-left-radius: 4px;
}

.c22 th:last-child {
  border-top-right-radius: 4px;
}

.c22 td {
  padding-left: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c23 td:nth-child(7) {
  white-space: pre-wrap;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.c8 {
  max-width: 400px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 .MuiSwitch-thumb {
  color: #fff;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20id%3D%22Capa_29%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%20%7B%0A%20%20fill%3A%20%2300b3ec%3B%0A%7D%0A%0A.cls-2%20%7B%0A%20%20fill%3A%20none%3B%0A%20%20stroke%3A%20%2300b3ec%3B%0A%20%20stroke-linecap%3A%20round%3B%0A%20%20stroke-miterlimit%3A%2010%3B%0A%7D%0A%0A%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cpath%20class%3D%22cls-1%22%20d%3D%22m10%2C5.97c-1.06%2C0-2.08.42-2.83%2C1.17-.75.75-1.17%2C1.77-1.17%2C2.83s.42%2C2.08%2C1.17%2C2.83c.75.75%2C1.77%2C1.17%2C2.83%2C1.17s2.08-.42%2C2.83-1.17c.75-.75%2C1.17-1.77%2C1.17-2.83%2C0-2.21-1.79-4-4-4Z%22%3E%3C%2Fpath%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2210%22%20y1%3D%223.5%22%20x2%3D%2210%22%20y2%3D%224.5%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.41%22%20y1%3D%225.4%22%20x2%3D%226.11%22%20y2%3D%226.1%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%223.5%22%20y1%3D%229.99%22%20x2%3D%224.5%22%20y2%3D%229.99%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.4%22%20y1%3D%2214.58%22%20x2%3D%226.1%22%20y2%3D%2213.87%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%229.99%22%20y1%3D%2216.49%22%20x2%3D%229.99%22%20y2%3D%2215.49%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.58%22%20y1%3D%2214.59%22%20x2%3D%2213.87%22%20y2%3D%2213.88%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2216.49%22%20y1%3D%2210%22%20x2%3D%2215.49%22%20y2%3D%2210%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.59%22%20y1%3D%225.41%22%20x2%3D%2213.88%22%20y2%3D%226.11%22%3E%3C%2Fline%3E%3C%2Fsvg%3E%0A);
}

.c9 .MuiSwitch-track {
  background-color: #00b3ec;
}

.c10 {
  height: 40px;
  width: 40px;
}

.c10.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c10.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c12 {
  height: 100%;
  width: calc(100% - 48px);
  padding: 0 24px;
  max-height: calc(100vh - 60px);
  overflow-wrap: normal;
  overflow-x: scroll;
  margin: 0px auto;
}

.c2 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.c14 {
  background-color: #fff;
  border-radius: 10px;
  box-sizing: border-box;
  margin: 0 auto;
  min-height: 100%;
}

.c17 {
  width: calc(100% - 48px);
  padding: 24px;
  height: 100%;
}

.c4 {
  height: 60px;
  min-width: 650px;
  z-index: 2;
  width: calc(100% - 64px);
  padding: 0 32px;
}

.c15 .MuiAlert-root {
  width: 100%;
}

.c19 {
  margin-bottom: 24px;
}

.c19 > .actionButton.btn {
  margin-right: 12px;
  margin-bottom: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          <div
            class="c5"
          >
            <span
              class="c6 c7 c8 ellipsis"
              color="neutral40"
              data-testid="text-Applications"
              title="Applications"
            >
              Applications
            </span>
          </div>
        </div>
        <div
          class=""
        >
          <span
            class="MuiSwitch-root c9 $7335ba1b890ac032$var$DarkModeSwitch"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiSwitch-switchBase MuiSwitch-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-16 MuiSwitch-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="MuiSwitch-thumb"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiSwitch-track"
            />
          </span>
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root c10"
            tabindex="0"
            title="Account settings"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="c5 c11"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="c12"
      >
        <div
          class="c13 c14 c15"
        >
          <div
            class="c16 c17"
          >
            <div
              style="width: 100%;"
            >
              <div
                class="c18 c19"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined c20 actionButton btn MuiButton-outlinedPrimary MuiButton-disableElevation"
                  id="add-application"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <span
                      class="MuiButton-startIcon MuiButton-iconSizeMedium"
                    >
                      <div
                        class="c5 c21"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </div>
                    </span>
                    ADD AN APPLICATION
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div>
                  Git Repos not found
                </div>
              </div>
              <div
                class=""
              >
                <div
                  class="c1 c22 c23 $de7736a788c0c71d$var$AutomationsTable"
                >
                  <div
                    class="c24 c25"
                  >
                    <div
                      class="c26 $52441885c75ba9c5$var$CheckboxActions"
                    >
                      <div
                        class="$4d7d782bef2eb187$var$SyncButton"
                        style="position: relative; display: inline-block;"
                      >
                        <div
                          class="c18"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c20 c27 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              Sync
                            </span>
                          </button>
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c28 c29 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <div
                                class="c5 c21"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M7 10l5 5 5-5z"
                                  />
                                </svg>
                              </div>
                            </span>
                          </button>
                        </div>
                        <div
                          class="c18 c30"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c20 MuiButton-outlinedPrimary MuiButton-disableElevation"
                            style="white-space: nowrap;"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              Sync Without Source
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                      <div
                        class="c31"
                      />
                      <div
                        class=""
                        title="Suspend Selected"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined c20 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="c5 c11"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>
                      </div>
                      <div
                        class="c31"
                      />
                      <div
                        class=""
                        title="Resume Selected"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined c20 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="c5 c11"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8 5v14l11-7z"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>
                      </div>
                      <div
                        class="c31"
                      />
                    </div>
                    <div
                      class="c32 c33 $9121bed0097d59fd$var$ChipGroup"
                    />
                    <div
                      class="c5 c34"
                    >
                      <div
                        class="c5 $621c541edae1f860$var$SearchField"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c28 $621c541edae1f860$var$SearchField MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="c5 c35"
                            >
                              <svg
                                id="explorer"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="path-fill"
                                  d="m9.59,5c1.23,0,2.38.48,3.24,1.34.87.87,1.34,2.02,1.34,3.24s-.48,2.38-1.34,3.24-2.02,1.34-3.24,1.34-2.38-.48-3.24-1.34-1.34-2.02-1.34-3.24.48-2.38,1.34-3.24c.87-.87,2.02-1.34,3.24-1.34m0-1c-1.43,0-2.86.55-3.95,1.64-2.18,2.18-2.18,5.72,0,7.9,1.09,1.09,2.52,1.64,3.95,1.64s2.86-.55,3.95-1.64c2.18-2.18,2.18-5.72,0-7.9-1.09-1.09-2.52-1.64-3.95-1.64h0Z"
                                />
                                <path
                                  class="path-fill"
                                  d="m7.44,7.91c-.13,0-.25-.04-.34-.14-.2-.2-.21-.49-.02-.69l.04-.04c.2-.2.51-.2.71,0s.2.51,0,.71c-.1.1-.24.16-.38.16Zm3.81-.38c-.09,0-.18-.02-.26-.07l.21-.46.27-.42-.27.42.3-.4c.24.14.31.45.17.69-.09.16-.26.24-.43.24Zm-1.96-.48c-.25,0-.49-.18-.52-.44-.03-.27.14-.52.41-.55h.05c.27-.05.52.16.55.43.03.27-.16.52-.44.55-.02,0-.04,0-.06,0Z"
                                />
                                <path
                                  class="path-fill"
                                  d="m11.25,7.53c-.25,0-.49-.18-.52-.44-.03-.27.14-.52.41-.55h.05c.27-.05.52.16.55.43.03.27-.16.52-.44.55-.02,0-.04,0-.06,0Z"
                                />
                                <line
                                  class="stroke-fill"
                                  x1="13.24"
                                  x2="14.71"
                                  y1="13.24"
                                  y2="14.71"
                                />
                                <rect
                                  class="stroke-fill"
                                  height="6.09"
                                  rx="1"
                                  ry="1"
                                  transform="translate(-7.09 17.13) rotate(-45)"
                                  width="2.03"
                                  x="16.11"
                                  y="14.08"
                                />
                              </svg>
                            </div>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c36 "
                        >
                          <form>
                            <div
                              class="MuiFormControl-root MuiTextField-root $66a683f19021b9f2$var$Input"
                            >
                              <div
                                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                              >
                                <input
                                  aria-invalid="false"
                                  class="MuiInputBase-input MuiInput-input"
                                  id="table-search"
                                  placeholder="Search"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </form>
                        </div>
                      </div>
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text c28 MuiButton-colorInherit MuiButton-disableElevation"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <div
                            class="c5 c35"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                              />
                            </svg>
                          </div>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="c37"
                  >
                    <div
                      class="MuiTableContainer-root"
                    >
                      <table
                        aria-label="simple table"
                        class="MuiTable-root"
                      >
                        <thead
                          class="MuiTableHead-root"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <span
                                aria-disabled="false"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-14 Mui-checked MuiIconButton-colorPrimary"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    checked=""
                                    class="PrivateSwitchBase-input-16"
                                    data-indeterminate="false"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </span>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Name
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Kind
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Namespace
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Tenant
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Cluster
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Source
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class="selected"
                                    >
                                      Status
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  class="c5 c21 downward"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Message
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Revision
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c26"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c38 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Last Updated
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c31"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root c39"
                            colspan="10"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body"
                              colspan="10"
                            >
                              <div
                                class="c40"
                              >
                                <div
                                  class="c5 c41"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                                    />
                                  </svg>
                                </div>
                                <div
                                  class="c31"
                                />
                                <span
                                  class="c6 c42"
                                  color="neutral30"
                                >
                                  No data
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      class="c43"
                      data-testid="container"
                    >
                      <div
                        class="c44"
                      >
                        <div
                          class="c45 c46"
                        >
                          <div
                            class="c32"
                          >
                            <span
                              class="c6 c47"
                              color="neutral30"
                            >
                              Filters
                            </span>
                          </div>
                          <form
                            class="$311205a5eac77e9e$var$ControlledForm"
                          >
                            <ul
                              class="MuiList-root MuiList-padding"
                            >
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-15 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-16"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="clusterName"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c6 c48"
                                      color="neutral30"
                                    >
                                      cluster
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-15 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-16"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="namespace"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c6 c48"
                                      color="neutral30"
                                    >
                                      namespace
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-15 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-16"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="status"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c6 c48"
                                      color="neutral30"
                                    >
                                      status
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-15 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-16"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="tenant"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c6 c48"
                                      color="neutral30"
                                    >
                                      tenant
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-15 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-16"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="type"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c6 c48"
                                      color="neutral30"
                                    >
                                      type
                                    </span>
                                  </li>
                                </ul>
                              </li>
                            </ul>
                          </form>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
